--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             >Web<span class="logo-word-two">Studio</span></a
           >
           <ul class="nav-list">
-            <li><a class="nav-link" href="./index.html">Studio</a></li>
+            <li>
+              <a class="nav-link studio-nav" href="./index.html">Studio</a>
+            </li>
             <li><a class="nav-link" href="">Portfolio</a></li>
             <li><a class="nav-link" href="">Contacts</a></li>
           </ul>
@@ -65,6 +67,11 @@
           <h2 class="title visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
+              <div class="svg">
+                <svg class="qwe" widht="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -72,6 +79,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="svg">
+                <svg class="qwe" widht="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -79,6 +91,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="svg">
+                <svg class="qwe" widht="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Diligence</h3>
               <p class="text">
                 Research and confirm brands with the strongest digital growth
@@ -86,6 +103,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="svg">
+                <svg class="qwe" widht="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -105,6 +127,36 @@
               <div class="cart-content">
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
+                <ul class="social-list">
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links">
+                      <svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links">
+                      <svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-img">
@@ -112,6 +164,36 @@
               <div class="cart-content">
                 <h3 class="title">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links">
+                      <svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links">
+                      <svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-img">
@@ -119,6 +201,36 @@
               <div class="cart-content">
                 <h3 class="title">Camila Garcia</h3>
                 <p class="text">Marketing</p>
+                <ul class="social-list">
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links">
+                      <svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links">
+                      <svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-img">
@@ -126,6 +238,36 @@
               <div class="cart-content">
                 <h3 class="title">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
+                <ul class="social-list">
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links">
+                      <svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links">
+                    <a href="" target="_blank" class="media-links">
+                      <svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -137,62 +279,104 @@
           <h2 class="main-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-              />
+              <div class="hidden-info">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-content">
                 <h3 class="title">Banking App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/cashless-pay.jpg"
-                alt="Cashless Paymen"
-                width="360"
-              />
+              <div class="hidden-info">
+                <img
+                  src="./images/cashless-pay.jpg"
+                  alt="Cashless Paymen"
+                  width="360"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-content">
                 <h3 class="title">Cashless Payment</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/meditation.jpg"
-                alt="Meditation App"
-                width="360"
-              />
+              <div class="hidden-info">
+                <img
+                  src="./images/meditation.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-content">
                 <h3 class="title">Meditation App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img src="./images/taxi.jpg" alt="Taxi Service" width="360" />
+              <div class="hidden-info">
+                <img src="./images/taxi.jpg" alt="Taxi Service" width="360" />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-content">
                 <h3 class="title">Taxi Service</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/screen-illu.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+              <div class="hidden-info">
+                <img
+                  src="./images/screen-illu.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-content">
                 <h3 class="title">Screen Illustrations</h3>
                 <p class="text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/courses.jpg"
-                alt="Online Courses"
-                width="360"
-              />
+              <div class="hidden-info">
+                <img
+                  src="./images/courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <p class="hidden-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-list-content">
                 <h3 class="title">Online Courses</h3>
                 <p class="text">Marketing</p>
@@ -203,7 +387,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container" >
         <a class="footer-link" href="./index.html"
           >Web<span class="logo-word-two">Studio</span></a
         >
@@ -211,6 +395,27 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+<div class="footer-social">
+  <p class="footer-words">Social media</p>
+  <ul class="footer-icon-list">
+    <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg></li>
+                      <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg></li>
+                      <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg></li>
+                      <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
+                      ><svg class="team-social" widht="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg></li>
+  </ul>
+</div>
       </div>
     </footer>
   </body>
