--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <ul class="advantages-list">
             <li class="advantages-item">
               <div class="svg">
-                <svg class="qwe" widht="64" height="64">
+                <svg class="qwe" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -80,7 +80,7 @@
             </li>
             <li class="advantages-item">
               <div class="svg">
-                <svg class="qwe" widht="64" height="64">
+                <svg class="qwe" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -92,7 +92,7 @@
             </li>
             <li class="advantages-item">
               <div class="svg">
-                <svg class="qwe" widht="64" height="64">
+                <svg class="qwe" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -104,7 +104,7 @@
             </li>
             <li class="advantages-item">
               <div class="svg">
-                <svg class="qwe" widht="64" height="64">
+                <svg class="qwe" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -137,21 +137,21 @@
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links">
-                      <svg class="team-social" widht="16" height="16">
+                      <svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links">
-                      <svg class="team-social" widht="16" height="16">
+                      <svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -167,28 +167,28 @@
                 <ul class="social-list">
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links">
-                      <svg class="team-social" widht="16" height="16">
+                      <svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links">
-                      <svg class="team-social" widht="16" height="16">
+                      <svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -204,28 +204,28 @@
                 <ul class="social-list">
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links">
-                      <svg class="team-social" widht="16" height="16">
+                      <svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links">
-                      <svg class="team-social" widht="16" height="16">
+                      <svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -241,28 +241,28 @@
                 <ul class="social-list">
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="24" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links">
-                      <svg class="team-social" widht="16" height="16">
+                      <svg class="team-social" width="24" height="24">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links">
-                      <svg class="team-social" widht="16" height="16">
+                      <svg class="team-social" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
