--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <ul class="social-list">
                   <li class="social-links">
                     <a href="" target="_blank" class="media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
@@ -399,19 +399,19 @@
   <p class="footer-words">Social media</p>
   <ul class="footer-icon-list">
     <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg></li>
                       <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg></li>
                       <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg></li>
                       <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
-                      ><svg class="team-social" widht="16" height="16">
+                      ><svg class="team-social" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg></li>
   </ul>
