--- a/index.html
+++ b/index.html
@@ -387,35 +387,47 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container" >
-        <a class="footer-link" href="./index.html"
-          >Web<span class="logo-word-two">Studio</span></a
-        >
-        <p class="text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-<div class="footer-social">
-  <p class="footer-words">Social media</p>
-  <ul class="footer-icon-list">
-    <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
-                      ><svg class="team-social" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg></li>
-                      <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
-                      ><svg class="team-social" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg></li>
-                      <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
-                      ><svg class="team-social" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg></li>
-                      <li class="fotter-social-link"><a href="" target="_blank" class="footer-media-links"
-                      ><svg class="team-social" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg></li>
-  </ul>
-</div>
+      <div class="container footer-cont">
+        <div class="footer-logo-con">
+          <a class="footer-link" href="./index.html"
+            >Web<span class="logo-word-two">Studio</span></a
+          >
+          <p class="text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <p class="footer-words">Social media</p>
+        <ul class="footer-icon-list">
+          <li class="fotter-social-link">
+            <a class="footer-media-links" href="">
+              <svg class="team-social" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="fotter-social-link">
+            <a class="footer-media-links" href="">
+              <svg class="team-social" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="fotter-social-link">
+            <a class="footer-media-links" href="">
+              <svg class="team-social" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="fotter-social-link">
+            <a class="footer-media-links" href="">
+              <svg class="team-social" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
