--- a/index.html
+++ b/index.html
@@ -397,37 +397,39 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <p class="footer-words">Social media</p>
-        <ul class="footer-icon-list">
-          <li class="fotter-social-link">
-            <a class="footer-media-links" href="">
-              <svg class="team-social" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="fotter-social-link">
-            <a class="footer-media-links" href="">
-              <svg class="team-social" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="fotter-social-link">
-            <a class="footer-media-links" href="">
-              <svg class="team-social" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="fotter-social-link">
-            <a class="footer-media-links" href="">
-              <svg class="team-social" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="second-part-footer">
+          <p class="footer-words">Social media</p>
+          <ul class="footer-icon-list">
+            <li class="fotter-social-link">
+              <a class="footer-media-links" href="">
+                <svg class="team-social" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="fotter-social-link">
+              <a class="footer-media-links" href="">
+                <svg class="team-social" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="fotter-social-link">
+              <a class="footer-media-links" href="">
+                <svg class="team-social" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="fotter-social-link">
+              <a class="footer-media-links" href="">
+                <svg class="team-social" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
